Carousel update, menu bug squash

--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -6,6 +6,12 @@
     font-family: Arial, sans-serif;
     max-width: 100%;
   }
+
+
+  .stop-scrolling {
+    height: 100%;
+    overflow: hidden;
+  }
   
   .header {
     min-height: 45px;
@@ -80,15 +86,10 @@
   
 
   .frontPageCard {
-    min-width: 80vw;
+    min-width: 100vw;
     height: 60vh;
-    /* padding-right: 2vw; */
-    margin-right: 10vw;
-    margin-left: 10vw;
     border: 1px solid rgba(0, 0, 0, 1);
     border-radius: 10px;
-    margin-top: 10vh;
-    margin-bottom: 10vh;
     box-shadow: 3px 3px 10px grey;
     display: inline-block;
     scroll-snap-align: center;
@@ -143,7 +144,7 @@
     outline: none !important;
     position: fixed;
     top: 0;
-    padding-top: 2.5vh;
+    padding-top: 3.5vh;
     height: 10vh;
     padding-right: 1vw;
     right: 15px;
@@ -183,17 +184,16 @@
     border-top: 1px solid rgba(0, 0, 0, 1);
     border-bottom: 1px solid rgba(0, 0, 0, 1);
     box-shadow: inset 0px 0px 20px 0px grey;
+    overflow-y: hidden;
   }
 
   .cardImageContainer {
     overflow: hidden;
-    height: 45vh;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+    height: 60vh;
   }
 
   .cardImage {
-    width: 80vw;
+    width: 100vw;
     min-height: 225px;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -201,7 +201,17 @@
 
   .cardFooter {
     border-top: 1px solid #333;
+    width: 100%;
+    height: 100%;
     background-color: #FAFAFA;
+    opacity: 0.6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .avoid-clicks {
+    pointer-events: none;
   }
 
   
@@ -210,8 +220,12 @@
     line-height: 10vh;
     padding-left: 15vw;
     padding-right: 15vw;
-    font-size: 2rem;
+    font-size: 3rem;
     color: #CCC;
+  }
+
+  .hidden li {
+    pointer-events: none;
   }
   
   .header-content li:hover {
@@ -226,7 +240,7 @@
 
 
   .footer {
-    height: 25vh;
+    height: 15vh;
     background: #333;
   }
 
@@ -240,6 +254,7 @@
     justify-content: space-around;
     padding-right: 5vw;
     padding-left: 5vw;
+    margin: 0;
   }
 
   .footerLinksContainer > li {
@@ -422,9 +437,12 @@
     box-shadow: 0px -20px 20px 0px grey; 
   }
 
-  .frontPageCard {
-    min-width: 80vw !important;
-    margin-right: 20vw !important;
+  .menu-title {
+    font-size: 3vh;
+  }
+
+  .header-content li {
+    font-size: 2rem;
   }
 
   
@@ -456,6 +474,14 @@
     box-shadow: 3px 3px 8px grey;
   }
 
+  .menu-title {
+    font-size: 4vh;
+  }
+
+  .header-content li {
+    font-size: 2rem;
+  }
+
   
   .frontPageTextBoxHeader {
     height: 30vh;
@@ -464,7 +490,7 @@
 
   .headerText {
     padding-top: 20vh;
-    margin-bottom: 5vh;
+    margin-bottom: 3vh;
     text-align: center;
     margin-top: 0px !important;
   }
